--- a/Customer/Index.html
+++ b/Customer/Index.html
@@ -19,10 +19,11 @@
                 <a href="Product.html">Product</a>
                 <a href="About.html">About Us</a>
                 <a href="Contact.html">Contact Us</a>
-                <a href="Cart.html">Cart</a>
+                <a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </div>
     </div>
+    <script src="https://kit.fontawesome.com/ac3e1651db.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
