--- a/Customer/Index.html
+++ b/Customer/Index.html
@@ -15,7 +15,8 @@
     <div id="main">
         <div id="nav">
             <div id="navl">
-                <img src="\imgs\Harvest Harmony Logo.png" alt="" srcset="">
+                
+                <a href="Index.html"><img src="\imgs\Harvest Harmony Logo.png" alt="" srcset=""></a>
             </div>
             <div id="navr">
                 <a href="Index.html">Home</a>
