--- a/Customer/Index.html
+++ b/Customer/Index.html
@@ -26,6 +26,9 @@
                 <a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </div>
+        <div id="banner"><img src="\imgs\i1.jpg" alt="" srcset="">
+            <div class="text"></div>
+        </div>
     </div>
     <script src="https://kit.fontawesome.com/ac3e1651db.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
