--- a/Customer/Index.html
+++ b/Customer/Index.html
@@ -27,8 +27,18 @@
             </div>
         </div>
         <div id="banner"><img src="\imgs\i1.jpg" alt="" srcset="">
-            <div class="text"></div>
+            <div class="text"><p> Connecting Farmers And Freshness, <br> Directly To Your Doorstep.</p></div>
         </div>
+        <div class="anima">
+            <marquee behavior="" direction="">Connecting Farmers And Freshness, Directly To Your Doorstep.</marquee>
+        </div>
+        <div id="product">
+            <div class="card" style="width: 18rem;">
+                <img src="https://media.istockphoto.com/id/177834117/photo/butter-isolated-on-white.jpg?s=612x612&w=0&k=20&c=wKXNDSvB-tzfT9RPdmKsH2JAGpBv7OISdUmGdegupxg=" class="card-img-top" alt="...">
+                <a href="#">More</a>
+              </div>
+        </div>
+
     </div>
     <script src="https://kit.fontawesome.com/ac3e1651db.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
